feat: add pages

--- a/client/public/hoge.html
+++ b/client/public/hoge.html
@@ -5,19 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+
   <style>
     button {
       background: red;
     }
   </style>
+  
 </head>
 <body>
   <div>
     <button>
-      <a href="/next.html">/next</a>
+        <a href="/">/</a>
     </button>
     <button>
-        <a href="/hoge.html"> /hoge</a>
+        <a href="/next.html">/next</a>
     </button>
   </div>
   
