--- a/client/public/next.html
+++ b/client/public/next.html
@@ -14,14 +14,15 @@
 <body>
   <div>
     <button>
-      <a href="/next.html">/next</a>
+      <a href="/">/</a>
     </button>
     <button>
-        <a href="/hoge.html"> /hoge</a>
+      <a href="/hoge.html"> /hoge</a>
     </button>
   </div>
+
+  <div>This is next page!!</div>
   
-  <div>This is demo page!!</div>
 
   <script src="http://localhost:8081/tracker.js"></script>
   <script src="./index.js"></script>
